--- a/combo.css
+++ b/combo.css
@@ -2,4 +2,5 @@
 ---
 {% include css/base.css %}
 {% include css/skeleton.css %}
-{% include css/main.css %}
+{% include css/boxes2.css %}
+{% include css/hackedmain.css %}
